Integrated RoomDB, track recording, some UI optimisations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Audio Workstation</string>
     <string name="REC">Record</string>
+    <string name="PlayTrackButton">PlayTrackButton</string>
 </resources>
